Se agrega escenario

--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -1,4 +1,5 @@
 .map-container {
+  background-image: url("../pictures/EscenarioC.png");
   width: auto;
   height: auto;
   border: 3px solid rgb(0, 255, 221);
